k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: matchguard
  labels:
    project: matchguard-final-project
    author: elias
